--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ nav a:hover {
           3-- English Grammer
           4-- One word Substitution
           5-- Last Year PYQs -->
-          <a href="/mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
+          <a href="Static GK\mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
           <!-- Divide into 7 Major and Scoring Topics
           Provide their notes and cheatsheet related pdfs and youtube video link on the website -->
-          <a href="#">SSC MTS VOCABULARY</a>
+          <a href="English Vocabulary\ssc_vocabulary.html">SSC MTS VOCABULARY</a>
     <a href="updateNotes.html">Update Notes</a>
     <a href="about.html">About</a>
     <!-- <a href="admin_update_old.html">Admin panel</a> -->
