New update on 24-04-2024
Added some files

--- a/English Vocabulary/synonyms_antonyms.topic.html
+++ b/English Vocabulary/synonyms_antonyms.topic.html
@@ -103,7 +103,7 @@
 
     <h1 class="mx-2 px-4">I-Quiz by Quizy</h1>
     <h2 class="mx-2 px-4 text-center">MTS ENGLISH VOCABULARY QUIZ</h2>
-    <h3 class="text-center">Select Any Topic of One Word Substitution</h3>
+    <h3 class="text-center">Select Any Topic of Synonyms & Antonyms</h3>
 
 
     <div id="quiz-container">
@@ -113,15 +113,15 @@
 
         <div id="question-container"></div>
         <div id="options-container" class="option">
-            <h3><a href="\English Vocabulary\ows\phobia_quiz.html">Phobia</a></h3>
-            <h3><a href="\English Vocabulary\ows\Maina_quiz.html">Mania</a></h3>
-            <h3><a href="\English Vocabulary\ows\Phile_quiz.html">Phile</a></h3>
-            <h3><a href="\English Vocabulary\ows\cide_quiz.html">Cide</a></h3>
-            <h3><a href="\English Vocabulary\ows\cracy_quiz.html">Cracy/Chy</a></h3>
-            <h3><a href="\English Vocabulary\ows\graphy_quiz.html">Graphy</a></h3>
-            <h3><a href="\English Vocabulary\ows\residence_quiz.html">Residence</a></h3>
-            <h3><a href="\English Vocabulary\ows\logy_quiz.html">Logy</a></h3>
-            <h3><a href="\English Vocabulary\ows\miscellaneous_quiz.html">Miscellaneous</a></h3>
+            <h3><a href="\English Vocabulary\ows\phobia_quiz.html">Pt 1</a></h3>
+            <h3><a href="\English Vocabulary\ows\Maina_quiz.html">Pt 2</a></h3>
+            <h3><a href="\English Vocabulary\ows\Phile_quiz.html">Pt 3</a></h3>
+            <h3><a href="\English Vocabulary\ows\cide_quiz.html">Pt 4</a></h3>
+            <h3><a href="\English Vocabulary\ows\cracy_quiz.html">Pt 5</a></h3>
+            <h3><a href="\English Vocabulary\ows\graphy_quiz.html">Pt 6</a></h3>
+            <h3><a href="\English Vocabulary\ows\residence_quiz.html">Pt 7</a></h3>
+            <h3><a href="\English Vocabulary\ows\logy_quiz.html">Pt 8</a></h3>
+            <h3><a href="\English Vocabulary\ows\miscellaneous_quiz.html">Pt 9</a></h3>
             <!-- <h3></h3>
             <h3></h3>
             <h3></h3>
