--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ nav a:hover {
         
   <nav>
     <a href="index.html">Home</a>
-    <a href="quiz.html">Quiz</a>
-          <a href="/mts_english_quiz.html">SSC MTS ENGLISH</a>
+    <a href="main_app\quiz.html">Quiz</a>
+          <a href="English Vocabulary\mts_english_quiz.html">SSC MTS ENGLISH</a>
           <!-- Subsection
           1-- English Vocab Synonyms/Antonyms
           2-- English Idom/Phases
@@ -84,8 +84,8 @@ nav a:hover {
           <!-- Divide into 7 Major and Scoring Topics
           Provide their notes and cheatsheet related pdfs and youtube video link on the website -->
           <a href="English Vocabulary\ssc_vocabulary.html">SSC MTS VOCABULARY</a>
-    <a href="updateNotes.html">Update Notes</a>
-    <a href="about.html">About</a>
+    <a href="main_app\updateNotes.html">Update Notes</a>
+    <a href="main_app\about.html">About</a>
     <!-- <a href="admin_update_old.html">Admin panel</a> -->
 </nav>
     
