--- a/English Vocabulary/ows/phile_quiz.html
+++ b/English Vocabulary/ows/phile_quiz.html
@@ -10,6 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="mts_english.css">
    
+
   </head>
 
   <style>
@@ -92,7 +93,7 @@
     <a href="quiz.html">Quiz</a>
           <a href="/mts_english_quiz.html">SSC MTS ENGLISH</a>
           <a href="/mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
-          <a href="#">SSC MTS VOCABULARY</a>
+          <a href="ssc_vocabulary.html">SSC MTS VOCABULARY</a>
     <a href="updateNotes.html">Update Notes</a>
     <a href="about.html">About</a>
     <!-- <a href="admin_update_old.html">Admin panel</a> -->
@@ -101,29 +102,27 @@
 
 
 <h1 class="mx-2 px-4">I-Quiz by Quizy</h1>
-<h2 class="mx-2 px-4 text-center">MTS ENGLISH VOCABULARY QUIZ</h2>
-<h3 class="text-center">Select Any Topic</h3>
+<h2 class="mx-2 px-4 text-center">MTS ENGLISH QUIZ</h2>
+<h3>Phile Quiz</h3>
 
 
     <div id="quiz-container">
      <!-- Add these within the #quiz-container div -->
-<!-- <div id="total-timer">Total Time Remaining: 10:00</div>
-<div id="question-timer">Question Time Remaining: 20 seconds</div> -->
+<div id="total-timer">Total Time Remaining: 10:00</div>
+<div id="question-timer">Question Time Remaining: 20 seconds</div>
 
         <div id="question-container"></div>
-        <div id="options-container" class="option">
-            <h3><a href="ows_topic.html">OWS</a></h3>
-            <h3><a href="idioms_topic.html">Idiom & Pharses</a></h3>
-            <h3><a href="synonyms_antonyms.topic.html">Synonyms & Antonyms</a></h3>
-            <h3></h3>
-
-
-        </div>
+        <div id="options-container" class="option"></div>
         <button id="next-btn" onclick="nextQuestion()">Next</button>
         <p id="feedback"></p>
     </div>
 
-    <script src=""></script>
+    <script src="/English Vocabulary\ows\phile_quiz.js"></script>
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
