--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ nav a:hover {
             <button id="next-btn" onclick="nextQuestion()">Next</button>
             <p id="feedback"></p> -->
             <h1 class="mx-2 px-4">I-Quiz by Quizy</h1>
-           <a href="quiz.html"> <button type="submit" class="btn btn-primary">Cilck Here</button></a>
+           <a href="quiz.html"> <button type="submit" class="btn btn-primary">Cilck to Start</button></a>
     </div>
 
     <script src="script.js"></script>
