--- a/main_app/quiz.html
+++ b/main_app/quiz.html
@@ -103,7 +103,7 @@ a:hover {
         <p id="feedback"></p>
     </div>
 
-    <script src="quiz.js"></script>
+    <script src="main_app/quiz.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
