--- a/main_app/quiz.html
+++ b/main_app/quiz.html
@@ -90,7 +90,7 @@
         <h3 id="user-class-cert">[Your Class]</h3>
         <p>You have successfully completed the C language quiz.</p>
         <p>Your score is: <span id="final-score-cert">[Score]</span></p>
-        <p>   Out of : 30 <span id="final-score-cert">[Score]</span></p>
+        <p>   Out of : 30 </p>
         <p>Date: <span id="current-date-cert"></span></p>
         <button class="download-btn" onclick="downloadCertificate()">Download Certificate as PDF</button>
     </div>
