--- a/main_app/quiz.html
+++ b/main_app/quiz.html
@@ -4,70 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C Language Quiz</title>
-    <style>
-        /* Basic certificate styling */
-        .certificate {
-            width: 70%;
-            margin: 50px auto;
-            border: 5px solid black;
-            padding: 20px;
-            text-align: center;
-            font-family: 'Arial', sans-serif;
-        }
-
-        .certificate-title {
-            font-size: 36px;
-            font-weight: bold;
-        }
-
-        .certificate-body {
-            margin-top: 20px;
-            font-size: 20px;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-
-        #quiz-container {
-            width: 80%;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        button {
-            padding: 10px 15px;
-            margin: 10px;
-            cursor: pointer;
-        }
-
-        #certificate-container {
-            display: none;
-            width: 80%;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #fff;
-            border: 3px solid gold;
-            text-align: center;
-            border-radius: 10px;
-        }
-
-        .download-btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+        
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
