--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ nav a:hover {
   <nav>
     <a href="index.html">Home</a>
     <a href="main_app\quiz.html">Quiz</a>
-    <a href="full length test\index.html">PYQs Full Length Test</a>
+    < href="main_app\pmptm\bca_23-26\test_result\index.html">PMPTM </a>
+    <!--<a href="full length test\index.html">PYQs Full Length Test</a>
           <a href="English Vocabulary\mts_english_quiz.html">SSC MTS ENGLISH</a>
           <!-- Subsection
           1-- English Vocab Synonyms/Antonyms
@@ -84,7 +85,7 @@ nav a:hover {
           <a href="Static GK\mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
           <!-- Divide into 7 Major and Scoring Topics
           Provide their notes and cheatsheet related pdfs and youtube video link on the website -->
-          <a href="English Vocabulary\ssc_vocabulary.html">SSC MTS VOCABULARY</a>
+          <a href="English Vocabulary\ssc_vocabulary.html">SSC MTS VOCABULARY</a>-->
     <a href="main_app\updateNotes.html">Update Notes</a>
     <a href="main_app\about.html">About</a>
     <!-- <a href="admin_update_old.html">Admin panel</a> -->
