--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ nav a:hover {
   <nav>
     <a href="index.html">Home</a>
     <a href="main_app\quiz.html">Quiz</a>
-    < href="main_app\pmptm\bca_23-26\test_result\index.html">PMPTM </a>
+    <a href="main_app\pmptm\bca_23-26\test_result\index.html">PMPTM </a>
     <!--<a href="full length test\index.html">PYQs Full Length Test</a>
           <a href="English Vocabulary\mts_english_quiz.html">SSC MTS ENGLISH</a>
           <!-- Subsection
