--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ nav a:hover {
   <nav>
     <a href="index.html">Home</a>
     <a href="main_app\quiz.html">Quiz</a>
-    <a href="main_app\pmptm\bca_23-26\test_result\index.html">PMPTM </a>
+    <a href="main_app\pmptm.html">PMPTM </a>
     <!--<a href="full length test\index.html">PYQs Full Length Test</a>
           <a href="English Vocabulary\mts_english_quiz.html">SSC MTS ENGLISH</a>
           <!-- Subsection
@@ -81,26 +81,28 @@ nav a:hover {
           2-- English Idom/Phases
           3-- English Grammer
           4-- One word Substitution
-          5-- Last Year PYQs -->
-          <a href="Static GK\mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
+          5-- Last Year PYQs 
+          <a href="Static GK\mts_static_gk_quiz.html">SSC MTS STATIC GK</a>-->
           <!-- Divide into 7 Major and Scoring Topics
           Provide their notes and cheatsheet related pdfs and youtube video link on the website -->
-          <a href="English Vocabulary\ssc_vocabulary.html">SSC MTS VOCABULARY</a>-->
+         <!--     <a href="English Vocabulary\ssc_vocabulary.html">SSC MTS VOCABULARY</a>-->
     <a href="main_app\updateNotes.html">Update Notes</a>
     <a href="main_app\about.html">About</a>
     <!-- <a href="admin_update_old.html">Admin panel</a> -->
 </nav>
-    
+
+    <!--
         
       <div id="quiz-container">
           <!-- <div id="question-container"></div>
             <div id="options-container" class="option"></div>
             <button id="next-btn" onclick="nextQuestion()">Next</button>
             <p id="feedback"></p> -->
+        <!--
             <h1 class="mx-2 px-4">I-Quiz by Quizy</h1>
            <a href="main_app\quiz.html"> <button type="submit" class="btn btn-primary">Cilck to Start</button></a>
     </div>
-
+-->
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
