--- a/main_app/updateNotes.html
+++ b/main_app/updateNotes.html
@@ -78,10 +78,11 @@ nav a:hover {
   <!-- New navbar as on 23-02-2024 -->
   <nav>
     <a href="index.html">Home</a>
-    <a href="quiz.html">Quiz</a>
-          <a href="/mts_english_quiz.html">SSC MTS ENGLISH</a>
+   <!-- <a href="quiz.html">Quiz</a>-->
+        <!--  <a href="/mts_english_quiz.html">SSC MTS ENGLISH</a>
           <a href="/mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
           <a href="#">SSC MTS VOCABULARY</a>
+    -->
     <a href="updateNotes.html">Update Notes</a>
     <a href="about.html">About</a>
     <!-- <a href="admin_update_old.html">Admin panel</a> -->
