--- a/main_app/about.html
+++ b/main_app/about.html
@@ -45,7 +45,7 @@ nav a:hover {
 
 
   <nav>
-    <a href="index.html">Home</a>
+    <a href="/index.html">Home</a>
    <!-- <a href="quiz.html">Quiz</a>
           <a href="/mts_english_quiz.html">SSC MTS ENGLISH</a>
           <a href="/mts_static_gk_quiz.html">SSC MTS STATIC GK</a>
